syntax = "proto3";

package volo.abp.validation.string_values.v8;

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

message StringValueType {
  string name = 1;
  map<string, google.protobuf.Any> properties = 2;
  ValueValidator validator = 3;
  oneof type {
    ToggleStringValueType toggle = 4;
    FreeTextStringValueType free_text = 5;
    SelectionStringValueType selection = 6;
  }
}
message ValueValidator {
  string name = 1;
  map<string, google.protobuf.Any> properties = 2;
  oneof type {
    StringValueValidator string = 3;
  }
}
message StringValueValidator {
  bool allow_null = 1;
  int32 min_length = 2;
  google.protobuf.Int32Value max_length = 3;
  google.protobuf.StringValue regular_expression = 4;
}
message NumericValueValidator {
  int32 min_value = 1;
  google.protobuf.Int32Value max_value = 2;
}
message ToggleStringValueType {}
message FreeTextStringValueType {}
message SelectionStringValueType {
  SelectionStringValueItemSource item_source = 1;
}

message SelectionStringValueItemSource {
  oneof type {
    StaticSelectionStringValueItemSource static = 1;
  }
}
message SelectionStringValueItem {
  string value = 1;
  LocalizableStringInfo display_text = 2;
  oneof type {
    LocalizableSelectionStringValueItem localizable = 3;
  }
}
message LocalizableSelectionStringValueItem {}
message LocalizableStringInfo {
  string resource_name = 1;
  string name = 2;
}
message StaticSelectionStringValueItemSource {
  repeated SelectionStringValueItem items = 1;
}
